# Urban-Harmony-Network

./: .env  .gitignore  API_CONFIGURATION.md  LICENSE  README.markdown  README.md  Readme2.md  SECURITY.md  app.py  index.html  pyproject.toml  styleUHN.css
attached_assets/: Pasted--Innovative-IoT-Project-Idea-Urban-Harmony-Network-As-an-IoT-expert-I-d-focus-on-building-a-gr-1758736799428_1758736799429.txt
pages/: 1_📊_Dashboard.py  2_🗺️_City_Map.py  3_🧠_AI_Predictions.py  4_💡_Interventions.py  5_📈_Analytics.py  AI_Predictions.py  Analytics.py  Dashboard.py  Interventions.py
utils/: blockchain_data_sharing.py  data_processor.py  database_manager.py  database_manager_sqlite.py  google_maps_integration.py  gy4  iot_data_aggregator.py  map_generator.py  ml_models.py  mobile_app_integration.py  real_time_api_integration.py  real_time_intervention_system.py  sensor_simulation.py  tensorflow_models.py
